--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'nbdime-git-diff'
 description: 'Cleaner git diff of Ipython notebooks using nbdime'
 runs:
-  using: 'ubuntu-latest'
+  using: "composite"
   steps:
   - uses: actions/checkout@v3
     with:
